--- a/sass/main.scss
+++ b/sass/main.scss
@@ -91,7 +91,7 @@ $color_4: #f1f1f1;
             width: 100%;
             height: 82vh;
             background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%),
-                url("https://mrdeepak8461-pro.github.io/hotel/images/rooms1.jpg");
+                url("https://mrdeepak8461-pro.github.io/hotel/images/bgi1.jpg");
             background-size: 100% !important;
             background-repeat: no-repeat;
             background-position: top;
@@ -131,13 +131,13 @@ $color_4: #f1f1f1;
     }
     .item_child_2 {
         .child_div {
-            background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/index_img_2.jpeg");
+            background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/bgi2.jpg");
             background-size: 100%;
         }
     }
     .item_child_3 {
         .child_div {
-            background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/sports1.jpg");
+            background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/bgi3.jpg");
             background-size: 100%;
         }
     }
