--- a/sass/main.css
+++ b/sass/main.css
@@ -102,7 +102,7 @@ body {
 .index_header .item .child_div {
   width: 100%;
   height: 82vh;
-  background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/rooms1.jpg");
+  background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/bgi1.jpg");
   background-size: 100% !important;
   background-repeat: no-repeat;
   background-position: top;
@@ -151,12 +151,12 @@ body {
 }
 
 .index_header .item_child_2 .child_div {
-  background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/index_img_2.jpeg");
+  background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/bgi2.jpg");
   background-size: 100%;
 }
 
 .index_header .item_child_3 .child_div {
-  background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/sports1.jpg");
+  background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/bgi3.jpg");
   background-size: 100%;
 }
 
