--- a/sass/main.scss
+++ b/sass/main.scss
@@ -90,8 +90,8 @@ $color_4: #f1f1f1;
         .child_div {
             width: 100%;
             height: 82vh;
-            background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%),
-                url("https://mrdeepak8461-pro.github.io/hotel/images/bgi1.jpg");
+            background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("../images/acroombg.jpg");
+
             background-size: 100% !important;
             background-repeat: no-repeat;
             background-position: top;
@@ -131,13 +131,13 @@ $color_4: #f1f1f1;
     }
     .item_child_2 {
         .child_div {
-            background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/bgi2.jpg");
+            background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("../images/jimbg.jpg");
             background-size: 100%;
         }
     }
     .item_child_3 {
         .child_div {
-            background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("https://mrdeepak8461-pro.github.io/hotel/images/bgi3.jpg");
+            background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("../images/sportsbg.jpg");
             background-size: 100%;
         }
     }
