--- a/sass/main.css
+++ b/sass/main.css
@@ -95,8 +95,14 @@ body {
   padding: 0.3rem rem 2rem;
 }
 
-.navbar .navbar-brand img {
-  width: 40%;
+.navbar .navbar-brand h1 {
+  letter-spacing: 2px;
+}
+
+.navbar .navbar-brand h1::first-letter {
+  color: #f3413e;
+  font-weight: bold;
+  font-size: 2.5rem;
 }
 
 .index_header .item .child_div {
@@ -151,14 +157,11 @@ body {
 }
 
 .index_header .item_child_2 .child_div {
-
   background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("../images/jimbg.jpg");
   background-size: 100%;
- 
 }
 
 .index_header .item_child_3 .child_div {
-
   background: linear-gradient(120deg, rgba(0, 0, 0, 0.5) 50%, transparent 50%), url("../images/sportsbg.jpg");
   background-size: 100%;
 }
