--- a/sass/main.css
+++ b/sass/main.css
@@ -261,71 +261,142 @@ body {
   color: #f3413e;
 }
 
-.our_specialists {
+.team {
   margin-top: 3rem;
+  height: 500px;
 }
 
-.our_specialists ul {
-  margin: 2rem 0rem;
+.team .owl-carousel-2 .item {
+  margin: 2rem auto;
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
 }
 
-.our_specialists ul li .nav-link {
-  border: 1px solid #333;
-  margin-right: 0.8rem;
-  color: #333;
+.team .owl-carousel-2 .item img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-bottom: 1rem;
 }
 
-.our_specialists ul li .active {
-  background-color: #f3413e !important;
-  border: 1px solid #f3413e;
+.team .owl-carousel-2 .item h5 {
+  color: #f3413e;
+  font-size: 25px;
+  font-weight: 700;
 }
 
-.our_specialists .tz-gallery img {
-  width: 100%;
-  height: 250px;
-  margin: 0.6rem 0rem;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: top;
-     object-position: top;
-  border-radius: 0.2rem;
+.team .owl-carousel-2 .item .p {
+  font-size: 1rem;
+}
+
+.team .box {
+  position: relative;
+}
+
+.team .owl-nav .owl-prev {
+  position: absolute;
+  top: 30%;
+  left: 0%;
+  padding: 2rem;
+  background-color: white !important;
+  height: 100px;
+  padding: 1rem !important;
+}
+
+.team .owl-nav .owl-next {
+  position: absolute;
+  top: 30%;
+  right: 0%;
+  padding: 2rem;
+  background-color: white !important;
+  height: 100px;
+  padding: 1rem !important;
+}
+
+.team .owl-nav .owl-next:hover {
+  color: #212529;
+}
+
+.team .owl-nav .owl-prev:hover {
+  color: #212529;
+}
+
+.team .owl-nav {
+  font-size: 5rem;
+  font-weight: bold;
+  color: #212529;
+  background-color: white !important;
 }
 
 .wedding_and_event {
+  position: relative;
   margin-top: 3rem;
   background-color: #f1f1f1;
   padding: 2rem 0rem;
 }
 
-.wedding_and_event .row {
-  margin-top: 3rem;
-}
-
-.wedding_and_event .row .card {
-  border-radius: 0.5rem;
-  border: none;
-}
-
-.wedding_and_event .row .card img {
+.wedding_and_event .item {
   width: 100%;
-  height: 300px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  height: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
-.wedding_and_event .row .card h5 {
+.wedding_and_event .item .inner-item {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 2rem 2rem;
+  width: 500px;
+  margin-left: 4rem;
+}
+
+.wedding_and_event .item .inner-item h5 {
   font-weight: bold;
-  color: black;
 }
 
-.wedding_and_event .row .card p {
-  color: black;
+.wedding_and_event .item-1 {
+  background-image: url("../images/evants2.jpg");
+  background-position: center;
 }
 
-.wedding_and_event .row .card i {
+.wedding_and_event .item-2 {
+  background-image: url("../images/decoration-tabel.jpg");
+  background-position: center;
+}
+
+.wedding_and_event .owl-nav .owl-next:hover {
   color: #f3413e;
-  font-size: 1.8rem;
-  margin-right: 0.5rem;
+  background-color: transparent !important;
+}
+
+.wedding_and_event .owl-nav .owl-prev:hover {
+  color: #f3413e;
+  background-color: transparent !important;
+}
+
+.wedding_and_event .owl-nav {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #f3413e;
 }
 
 .enquiry_form {
