--- a/sass/main.scss
+++ b/sass/main.scss
@@ -79,15 +79,14 @@ $color_4: #f1f1f1;
 .navbar {
     padding: 0.3rem rem 2rem;
     .navbar-brand {
-        h1{
+        h1 {
             letter-spacing: 2px;
-            
         }
-       h1::first-letter{
-           color: #f3413e;
-           font-weight: bold;
-           font-size: 2.5rem;
-       } 
+        h1::first-letter {
+            color: #f3413e;
+            font-weight: bold;
+            font-size: 2.5rem;
+        }
     }
 }
 
@@ -228,62 +227,118 @@ $color_4: #f1f1f1;
         color: $color_1;
     }
 }
-.our_specialists {
+.team {
     margin-top: 3rem;
-    ul {
-        margin: 2rem 0rem;
-        li {
-            .nav-link {
-                border: 1px solid $color_3;
-                margin-right: 0.8rem;
-                color: $color_3;
+    height: 500px;
+    .owl-carousel-2 {
+        .item {
+            margin: 2rem auto;
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            img {
+                width: 150px;
+                height: 150px;
+                border-radius: 50%;
+                margin-bottom: 1rem;
             }
-            .active {
-                background-color: $color_1 !important;
-                border: 1px solid $color_1;
+            h5 {
+                color: $color_1;
+                font-size: 25px;
+                font-weight: 700;
+            }
+            .p {
+                font-size: 1rem;
             }
         }
     }
-    .tz-gallery {
-        img {
-            width: 100%;
-            height: 250px;
-            margin: 0.6rem 0rem;
-            object-fit: cover;
-            object-position: top;
-            border-radius: 0.2rem;
-        }
+    .box {
+        position: relative;
+    }
+    .owl-nav .owl-prev {
+        position: absolute;
+        top: 30%;
+        left: 0%;
+        padding: 2rem;
+        background-color: white !important;
+        height: 100px;
+        padding: 1rem !important;
+    }
+    .owl-nav .owl-next {
+        position: absolute;
+        top: 30%;
+        right: 0%;
+        padding: 2rem;
+        background-color: white !important;
+        height: 100px;
+        padding: 1rem !important;
+    }
+    .owl-nav .owl-next:hover {
+        color: $color_2;
+    }
+    .owl-nav .owl-prev:hover {
+        color: $color_2;
+    }
+    .owl-nav {
+        font-size: 5rem;
+        font-weight: bold;
+        color: $color_2;
+        background-color: white !important;
     }
 }
 
 .wedding_and_event {
+    position: relative;
     margin-top: 3rem;
     background-color: $color_4;
     padding: 2rem 0rem;
-    .row {
-        margin-top: 3rem;
-        .card {
-            border-radius: 0.5rem;
-            border: none;
-            img {
-                width: 100%;
-                height: 300px;
-                object-fit: cover;
-            }
+    .item {
+        width: 100%;
+        height: 500px;
+        display: flex;
+        align-items: center;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        .inner-item {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 2rem 2rem;
+            width: 500px;
+            margin-left: 4rem;
             h5 {
                 font-weight: bold;
-                color: black;
-            }
-            p {
-                color: black;
-            }
-            i {
-                color: $color_1;
-                font-size: 1.8rem;
-                margin-right: 0.5rem;
             }
         }
     }
+    .item-1{
+        background-image: url("../images/evants2.jpg");
+        background-position: center;
+  
+    }
+    .item-2{
+        background-image: url("../images/decoration-tabel.jpg");
+        background-position: center;
+    }
+  
+
+    .owl-nav .owl-next:hover {
+        color: $color_1;
+        background-color: transparent !important;
+    }
+    .owl-nav .owl-prev:hover {
+        color: $color_1;
+        background-color: transparent !important;
+    }
+    .owl-nav {
+        font-size: 2.5rem;
+        font-weight: bold;
+        color: $color_1;
+    }
+
+
 }
 
 .enquiry_form {
